--- a/Client/Restaurant.Client/Restaurant.WinPhone/packages.config
+++ b/Client/Restaurant.Client/Restaurant.WinPhone/packages.config
@@ -1,5 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="akavache" version="4.1.2" targetFramework="wp8" />
+  <package id="akavache.core" version="4.1.2" targetFramework="wp8" />
+  <package id="akavache.sqlite3" version="4.1.2" targetFramework="wp8" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="wp8" />
+  <package id="reactiveui" version="6.5.0" targetFramework="wp8" />
+  <package id="reactiveui-core" version="6.5.0" targetFramework="wp8" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="wp8" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="wp8" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="wp8" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="wp8" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="wp8" />
+  <package id="Rx-WinRT" version="2.2.5" targetFramework="wp8" />
+  <package id="Rx-XAML" version="2.2.5" targetFramework="wp8" />
+  <package id="Splat" version="1.6.2" targetFramework="wp8" />
+  <package id="SQLitePCL.raw_basic" version="0.8.6" targetFramework="wp8" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp8" />
   <package id="Xamarin.Forms" version="2.1.0.6526" targetFramework="wp8" />
 </packages>
