--- a/Client/Restaurant.Client/Restaurant.Droid/packages.config
+++ b/Client/Restaurant.Client/Restaurant.Droid/packages.config
@@ -4,6 +4,7 @@
   <package id="akavache.core" version="5.0.0" targetFramework="monoandroid51" />
   <package id="akavache.sqlite3" version="5.0.0" targetFramework="monoandroid51" />
   <package id="Ansuria.XFGloss" version="1.0.6.59" targetFramework="monoandroid71" />
+  <package id="Autofac" version="3.5.2" targetFramework="monoandroid71" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="monoandroid51" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="monoandroid51" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid51" />
@@ -78,5 +79,5 @@
   <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.3.0" targetFramework="monoandroid51" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid51" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid51" />
-  <package id="Xamarin.Forms" version="2.3.4.231" targetFramework="monoandroid51" />
+  <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="monoandroid71" />
 </packages>
