--- a/Client/Restaurant.Client/Restaurant.iOS/packages.config
+++ b/Client/Restaurant.Client/Restaurant.iOS/packages.config
@@ -4,6 +4,7 @@
   <package id="akavache.core" version="5.0.0" targetFramework="xamarinios10" />
   <package id="akavache.sqlite3" version="5.0.0" targetFramework="xamarinios10" />
   <package id="Ansuria.XFGloss" version="1.0.6.59" targetFramework="xamarinios10" />
+  <package id="Autofac" version="3.5.2" targetFramework="xamarinios10" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
@@ -70,5 +71,5 @@
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.1" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.3.2.127" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="xamarinios10" />
 </packages>
