--- a/Client/Restaurant.Client/Restaurant/Restaurant.csproj
+++ b/Client/Restaurant.Client/Restaurant/Restaurant.csproj
@@ -49,6 +49,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\FlatButton.cs" />
+    <Compile Include="Controls\CustomViewCell.cs" />
     <Compile Include="Facades\AutoMapperFacade.cs" />
     <Compile Include="Facades\NavigationFacade.cs" />
     <Compile Include="Managers\AuthentiticationManager.cs" />
